--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <span style="font-size:0.83em; font-weight:normal;">to</span>
         <input type="date" id="end-date" value="2026-06-15" class="date-inline-picker">
     </h1>
+    <div style="text-align:center; margin: 1em 0;">
+        <button id="save-btn">Save</button>
+        <button id="load-btn">Load</button>
+    </div>
     <div id="calendar-overlay-wrap">
         <div id="calendar-grid-wrap">
             <table id="calendar-table"></table>
