add error checking to input boxes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="inputs-flex-row">
                 <textarea id="husband-text"
                     placeholder="E.g.&#10;London - 1/5 - 14/6&#10;Cyprus - 15/6 - 30/6"></textarea>
+                <div id="husband-errors" class="error-messages"></div>
                 <div class="stats" id="husband-stats"></div>
             </div>
         </div>
@@ -37,6 +38,7 @@
             <label for="wife-text">Leyla Itinerary</label>
             <div class="inputs-flex-row">
                 <textarea id="wife-text" placeholder="E.g.&#10;London - 1/5 - 29/5&#10;Cyprus - 30/5 - 4/8"></textarea>
+                <div id="wife-errors" class="error-messages"></div>
                 <div class="stats" id="wife-stats"></div>
             </div>
         </div>
